[workspace]
default-members = []
members = ["examples/basic_example"]

[package]
name = "slint_borderless_windows"
version = "0.1.0"
edition = "2024"
links = "slint_borderless_windows"
authors = ["Drew Chase"]
description = "Borderless window with a custom titlebar for Slint applications on Windows, with native DWM shadows, rounded corners, and resize hit-testing."
repository = "https://github.com/Drew-Chase/slint_borderless_windows"
license = "MIT"
keywords = ["slint", "windows", "borderless", "titlebar", "dwm"]
categories = ["gui", "os::windows-apis"]
readme = "README.md"

[build-dependencies]
slint-build = { version = "1.16.1", features = ["experimental-module-builds"] }

[dependencies]
slint = { version = "1.16.1", features = ["backend-winit"] }
tracing = "0.1.44"
windows = "0.62.2"
i-slint-backend-winit = { version = "1.16.1" }
winit = { version = "0.30.13" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
